Resolve feedback comments